# qr-token-stl-generator

./: .gitignore  README.md  generate.bat  generate_single.bat  pyproject.toml  requirements.txt
app/: cli.py  models.py  png_fallback.py  qr_builder.py  validator.py
app/geometry/: base_shapes.py  qr_relief.py  stl_export.py  text_relief.py  token_builder.py
app/services/: batch_generator.py  preview_service.py  zip_service.py
app/utils/: file_utils.py  logging_utils.py
examples/: sample_tokens_round.json  sample_tokens_square.json  single_token.json
presets/: QR_token_50mm.json
tests/: test_generation.py  test_models.py  test_validator.py
